# pyopp_example

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/api/: pyopp.module1.Shape.rst  pyopp.module1.Square.rst  pyopp.module1.custom_cmap.rst  pyopp.module1.submodule_a.custom_cmap.rst  pyopp.module1.submodule_b.Shape.rst  pyopp.module1.submodule_b.Square.rst  pyopp.module2.exp_fit.rst  pyopp.module2.lin_fit.rst  pyopp.module2.submodule_c.exp_fit.rst  pyopp.module2.submodule_c.lin_fit.rst
docs/source/api-reference/module1/: index.rst  submodule_a.rst  submodule_b.rst
docs/source/api-reference/module2/: index.rst  submodule_c.rst
docs/source/tutorials/: index.rst  plot.rst
examples/: plot.ipynb
pyopp/: _version.py  version.py
pyopp/module1/: __init__.py  submodule_a.py  submodule_b.py
pyopp/module2/: __init__.py  submodule_c.py
src/pyopp/: __init__.py  _version.py
src/pyopp/module1/: submodule_a.py  submodule_b.py
src/pyopp/module2/: submodule_c.py
