[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyopp"
dynamic = ["version"]
description = "Example package for the PYOPP workshop"
readme = "README.md"
authors = [
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
]
maintainers = [
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
]
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 4 - Beta",
]

requires-python = ">=3.11"

dependencies = [
  "ipython",
  "joblib",
  "jupyter",
  "matplotlib",
  "numpy",
  "rich",
  "toml",
  "tqdm",
  "colour",
]

[project.optional-dependencies]

tests = [
  "coverage!=6.3.0",
  "h5py",
  "pytest >= 7.0",
  "pytest-cov",
  "pytest-xdist",
  "restructuredtext-lint",
  "tomli",
]

dev = [
  "pre-commit",
]

docs = [
  "graphviz",
  "ipython",
  "jupyter",
  "nbsphinx",
  "notebook",
  "numpydoc",
  "pydata_sphinx_theme",
  "sphinx",
  "sphinx-changelog",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery >= 0.16.0",
  "sphinx_automodapi",
  "sphinxcontrib-bibtex",
  "tomli; python_version < '3.11'",
]


[tool.setuptools_scm]
write_to = "pyopp/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.coverage.run]
omit = [
  "pyopp/version.py",
  "pryopp/_version.py",
  "docs/*",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.towncrier]
    package = "pyopp"
    directory = "docs/changes"
    filename = "CHANGES.rst"
    template = "docs/changes/template.rst"
    # let towncrier create proper links to the merged PR
    issue_format = "`#{issue} <https://github.com/aknierim/pyopp_example/pull/{issue}>`__"

    [tool.towncrier.fragment.feature]
        name = "New Features"
        showcontent = true

    [tool.towncrier.fragment.bugfix]
        name = "Bug Fixes"
        showcontent = true

    [tool.towncrier.fragment.api]
        name = "API Changes"
        showcontent = true

    [tool.towncrier.fragment.optimization]
        name = "Refactoring and Optimization"
        showcontent = true

    [tool.towncrier.fragment.maintenance]
        name = "Maintenance"
        showcontent = true

    [[tool.towncrier.section]]
        name = ""
        path = ""
